layout issues in ie fixed, players sorted by number

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -28,7 +28,8 @@ body{
 }
 
 .player-card{
-    width:65%;
+    width:70%;
+	min-height:435px;
     background-color:#c03;
     display:block;
     margin:20px auto;
