--- a/app/styles/text.css
+++ b/app/styles/text.css
@@ -3,11 +3,11 @@
     color:white;
 }
 
-a, a:hover{color:white}
+a, a:hover, a:visited{color:white}
 
 .slogan{
     color:white;
     font-family: "BrandonG300";
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 24px;
+    line-height: 24px;
 }
